.gem/ruby/2.4.0/extensions/x86_64-linux/2.4.0/json-1.8.3/gem_make.out
current directory: /home/austin/.gem/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
/usr/bin/ruby -r ./siteconf20170404-26369-1mjtb2g.rb extconf.rb
creating Makefile

current directory: /home/austin/.gem/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR=" clean

current directory: /home/austin/.gem/ruby/2.4.0/gems/json-1.8.3/ext/json/ext/generator
make "DESTDIR="
compiling generator.c
generator.c: In function ‘generate_json’:
generator.c:861:25: error: ‘rb_cFixnum’ undeclared (first use in this function)
     } else if (klass == rb_cFixnum) {
                         ^~~~~~~~~~
generator.c:861:25: note: each undeclared identifier is reported only once for each function it appears in
generator.c:863:25: error: ‘rb_cBignum’ undeclared (first use in this function)
     } else if (klass == rb_cBignum) {
                         ^~~~~~~~~~
make: *** [Makefile:242: generator.o] Error 1

make failed, exit code 2
